Delete Reservation Changes

--- a/src/NestedProjectLevel2/NestedProjectLevel2B/Trigonometry/Trigonometry/ProjectTemplate.csproj
+++ b/src/NestedProjectLevel2/NestedProjectLevel2B/Trigonometry/Trigonometry/ProjectTemplate.csproj
@@ -7,7 +7,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>22ec44b3-1604-4714-b80b-8cd0d8c1659f</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Trigonometry</RootNamespace>
     <AssemblyName>Trigonometry</AssemblyName>
